--- a/ang-assign2/index.html
+++ b/ang-assign2/index.html
@@ -23,19 +23,19 @@
     </style>
   </head>
 <body>
-  <div class="container"  ng-controller="ToBuyController as tbc">
+  <div class="container"  >
   <h1>Shopping List Check Off</h1>
 
   <div class="row">
 
     <!-- To Buy List -->
-    <div class="col-md-6">
+    <div class="col-md-6" ng-controller="ToBuyController as tbc">
      <h2>To Buy:</h2>
      <ul>
        <li ng-repeat="item in tbc.items">Buy {{item.quantity}} {{item.name}}
          <button ng-click="tbc.boughtItem($index);" class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button></li>
      </ul>
-     <div ng-if="tbc.empty" class="emptyMessage">Everything is bought!</div>
+     <div ng-if="tbc.items.length==0" class="emptyMessage">Everything is bought!</div>
     </div>
 
     <!-- Already Bought List -->
@@ -44,7 +44,7 @@
      <ul>
        <li ng-repeat="item in abc.items">Bought {{item.quantity}} {{item.name}}</li>
      </ul>
-     <div ng-if="tbc.bempty" class="emptyMessage">Nothing bought yet.</div>
+     <div ng-if="abc.items.length==0" class="emptyMessage">Nothing bought yet.</div>
     </div>
   </div>
 </div>
